Test tweaks